MCAPackagingOrg/src/objects/AdminPanelMetadata__mdt.object
<CustomObject>
    <description>To store ids of all labels, buttons related to components on admin panel.</description>
    <fields>
        <fullName>Configuration_Name__c</fullName>
        <label>Configuration Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Id_Value__c</fullName>
        <label>Id Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Component_Name__c</fullName>
        <label>Parent Component Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>AdminPanelMetadata</label>
    <pluralLabel>AdminPanelMetadata</pluralLabel>
</CustomObject>